--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>test</h1>
+    <h2>Dit is een 2e titel</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, facilis
+      mollitia deleniti eius qui nemo beatae adipisci quia. Doloribus, aliquid?
+      Facilis hic maxime earum quia. Architecto autem alias ratione similique?
+    </p>
   </body>
 </html>
