--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>test</h1>
     <h2>Dit is een 2e titel</h2>
+    <h3>test</h3>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, facilis
       mollitia deleniti eius qui nemo beatae adipisci quia. Doloribus, aliquid?
