--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>test</h1>
     <h2>Dit is een 2e titel</h2>
     <h3>test</h3>
+    <h4>extra titel</h4>
+    <h5>extra titelken</h5>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, facilis
       mollitia deleniti eius qui nemo beatae adipisci quia. Doloribus, aliquid?
