--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>test</h3>
     <h4>extra titel</h4>
     <h5>extra titelken</h5>
+    <h6>nog een titel</h6>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, facilis
       mollitia deleniti eius qui nemo beatae adipisci quia. Doloribus, aliquid?
