--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h4>extra titel</h4>
     <h5>extra titelken</h5>
     <h6>nog een titel</h6>
+    <h6>titel stijn</h6>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, facilis
       mollitia deleniti eius qui nemo beatae adipisci quia. Doloribus, aliquid?
